--- a/molly/demos/molly_oxford/apache.conf.template
+++ b/molly/demos/molly_oxford/apache.conf.template
@@ -7,15 +7,26 @@ WSGISocketPrefix /var/run/wsgi
 
     SetOutputFilter DEFLATE 
 
-    WSGIDaemonProcess molly user=apache group=apache threads=5
-    WSGIProcessGroup molly
-    WSGIScriptAlias / %(root)s/molly_oxford.wsgi
+#    WSGIApplicationGroup %%{GLOBAL}
+#    WSGIDaemonProcess molly user=apache group=apache threads=5
+#    WSGIProcessGroup molly
+#    WSGIScriptAlias / %(root)s/molly_oxford.wsgi
+
+
+    <Location />
+        SetHandler python-program
+        PythonHandler django.core.handlers.modpython
+        SetEnv DJANGO_SETTINGS_MODULE demos.molly_oxford.settings
+        PythonPath "['%(root)s/../../'] + sys.path"
+    </Location>
+
 
     <Location />
         Order allow,deny
         Allow from all
     </Location>
     <Location /site-media/>
+        SetHandler None
         Header set Cache-Control "public"
         ExpiresActive On
         ExpiresDefault "access plus 1 day"
