Better Python path handling in the apache config file generation script.

--- a/molly/molly/utils/templates/utils/apache-vhost.conf
+++ b/molly/molly/utils/templates/utils/apache-vhost.conf
@@ -10,7 +10,7 @@
         PythonHandler django.core.handlers.modpython
         PythonInterpreter molly
         SetEnv DJANGO_SETTINGS_MODULE {{ django_settings_module }}
-        PythonPath "['{{ project_import_root }}','{{ molly_import_root }}'] + sys.path"
+        PythonPath "[{% for path in sys_path %}'{{ path }}'{% if not forloop.last %},{% endif %}{% endfor %}]"
         PythonAutoReload Off
     </Location>
 
