Tidying up generated apache conf in light of amalgamated media.

--- a/molly/molly/utils/templates/utils/apache-vhost.conf
+++ b/molly/molly/utils/templates/utils/apache-vhost.conf
@@ -1,7 +1,6 @@
     Alias /robots.txt {{ project_root }}/static/robots.txt
-    Alias /favicon.ico {{ project_root }}/site-media/ico/favicon.ico
-    Alias /admin-media/ {{ django_root }}/contrib/admin/media/
-    Alias /site-media/ {{ project_root }}/site-media/
+    Alias /favicon.ico {{ project_root }}/media/ico/favicon.ico
+    Alias /media/ {{ project_root }}/media/
 
     SetOutputFilter DEFLATE
 
@@ -19,9 +18,15 @@
         Allow from all
     </Location>
 
-    <LocationMatch /(admin-media/|site-media/|robots.txt|favicon.ico)>
+    <LocationMatch /(media/|robots.txt|favicon.ico)>
         SetHandler None
         Header set Cache-Control "public"
         ExpiresActive On
         ExpiresDefault "access plus 1 day"
+    </LocationMatch>
+
+    # These ones change filename each time they change.
+    <LocationMatch /media/c/>
+        ExpiresActive On
+        ExpiresDefault "access plus 1 year"
     </LocationMatch>
