--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 include setup.py README.creole MANIFEST.in LICENSE
-exclude molly/wurfl/wurfl_data.py
 recursive-include molly/apps/*/tests/data *
 recursive-include molly/apps/*/templates *
 recursive-include molly/apps/*/static *
@@ -10,3 +9,5 @@ recursive-include molly/*/data *
 recursive-include molly/media *
 recursive-include molly/templates *
 recursive-include molly/maps/management/commands/markers *
+recursive-include molly/commands/site_template *
+exclude molly/wurfl/wurfl_data.py
