--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python:
   - "2.6"
+  - "2.7"
 env:
   - DJANGO=1.3.1
 before_install:
@@ -13,3 +14,6 @@ install:
   - pip install -q -e . --use-mirrors
 script:
   - python setup.py test
+notifications:
+  irc:
+    - "irc.freenode.org#molly"
